lab01sol.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab01
  labels:
    app: lab01
spec:
  ports:
    - port: 7070
      targetPort: 7070
  selector:
    app: lab01
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab01
spec:
  selector:
    matchLabels:
      app: lab01
      version: v1
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab01
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: lab01
          image: mzegarra/lab01:0.0.2
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 7070
