lab02sol.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab02
  labels:
    app: lab02
spec:
  ports:
    - port: 7071
      targetPort: 7071
  selector:
    app: lab02
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab02
spec:
  selector:
    matchLabels:
      app: lab02
      version: v1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab02
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"        
    spec:
      containers:
        - name: lab02
          image: mzegarra/lab02:0.0.1
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 7071
             initialDelaySeconds: 20
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 7071
