lab03sol.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: configserver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"           
    spec:
      containers:
      - name: configserver
        image: mzegarra/lab03sut
        ports:
          - containerPort: 8888
        volumeMounts:
          - name: configserver-key
            mountPath: /config-server.jks
      volumes:
        - name: configserver-key
          secret:
            secretName: configserver-key
---
apiVersion: v1
kind: Service
metadata:
  name: configserver
  labels:
    app: configserver
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: configserver
  type: ClusterIP
  #type: LoadBalancer
