lab05sol.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab05
  labels:
    app: lab05
spec:
  ports:
    - port: 9999
      targetPort: 9999
  selector:
    app: lab05
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab05-v1
spec:
  selector:
    matchLabels:
      app: lab05
      version: v1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab05
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"           
    spec:
      serviceAccountName: lab05
      containers:
        - name: lab05
          image: mzegarra/lab05:0.0.2
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 9999
             initialDelaySeconds: 35
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          livenessProbe:
             httpGet:
               path: /actuator/health
               port: 9999
             initialDelaySeconds: 35
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 9999
