lab06MockCtaCte.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab06apictacte
  labels:
    app: lab06apictacte
spec:
  ports:
    - name: mocks
      port: 7070
      targetPort: 7070
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: lab06apictacte
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06apictactebus
  labels:
    version: bus
spec:
  selector:
    matchLabels:
      app: lab06apictacte
      version: bus
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06apictacte
        version: bus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
    spec:
      serviceAccountName: lab06apictacte   
      containers:
        - name: lab06apictacte
          image: mzegarra/lab06busctacte:0.0.2
          imagePullPolicy: IfNotPresent #Always
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8080
            - containerPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06apictacteace
  labels:
    version: ace
spec:
  selector:
    matchLabels:
      app: lab06apictacte
      version: ace
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06apictacte
        version: ace
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc        
    spec:
      serviceAccountName: lab06apictacte
      containers:
        - name: lab06apictacte
          image: mzegarra/lab06acectacte:0.0.3
          imagePullPolicy: IfNotPresent #Always
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8080
            - containerPort: 7070
