lab06sol.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab06
  labels:
    app: lab06
spec:
  ports:
    - name: http-api
      port: 7070
      targetPort: 7070
  selector:
    app: lab06
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06v1
spec:
  selector:
    matchLabels:
      app: lab06
      version: v1
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7070"
        prometheus.io/path: "/actuator/prometheus"
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc

    spec:
      serviceAccountName: lab06
      containers:
        - name: lab06
          image: mzegarra/lab06:0.0.7
          imagePullPolicy: Always #IfNotPresent #Always
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http-api
              containerPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06v2
spec:
  selector:
    matchLabels:
      app: lab06
      version: v2
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7070"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: lab06
      containers:
        - name: lab06
          image: mzegarra/lab06:0.0.7
          imagePullPolicy: Always #IfNotPresent #Always
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http-api
              containerPort: 7070
