http-virtualservice-lab05-lab02.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lab05-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
    - match:
        - uri:
            prefix: "/oauth"
        - uri:
            prefix: "/login"
      route:
      - destination:
          host: lab05
          subset: version
          port:
            number: 9999
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: lab05-destinationrule
  namespace: default
spec:
  host: lab05 # interpreted as lab05.default.svc.cluster.local
  subsets:
  - name: version
    labels:
      version: v2
  # - name: v2
  #   labels:
  #     version: v2
